test_regress/t/t_assert_always_unsup.out
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:21:7: Unsupported: always[] (in property expression)
   21 |       always [2:5] a;
      |       ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:25:7: Unsupported: s_always (in property expression)
   25 |       s_always [2:5] a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:29:7: Unsupported: eventually[] (in property expression)
   29 |       eventually [2:5] a;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:33:7: Unsupported: s_eventually[] (in property expression)
   33 |       s_eventually [2:5] a;
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:37:14: Unsupported: s_eventually[] (in property expression)
   37 |       always s_eventually [2:5] a;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:37:7: Unsupported: always (in property expression)
   37 |       always s_eventually [2:5] a;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:41:20: Unsupported: always[] (in property expression)
   41 |       s_eventually always [2:5] a;
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_assert_always_unsup.v:41:7: Unsupported: s_eventually (in property expression)
   41 |       s_eventually always [2:5] a;
      |       ^~~~~~~~~~~~
%Error: Exiting due to
